--- a/website/package.json
+++ b/website/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "build": "next build",
     "preview": "next dev -H 192.168.101.114",
     "start": "next start",
     "lint": "next lint"
@@ -16,10 +17,13 @@
     "@mui/material": "^5.15.2",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
+    "@react-three/rapier": "^1.2.1",
     "@tensorflow/tfjs": "^4.15.0",
     "axios": "^1.6.3",
     "gsplat": "^1.0.2",
+    "leva": "^0.9.35",
     "next": "14.0.4",
+    "r3f-perf": "^7.1.2",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.160.0"
