--- a/website/package.json
+++ b/website/package.json
@@ -15,17 +15,21 @@
     "@material-tailwind/react": "^2.1.8",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
+    "@nextui-org/react": "^2.2.9",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
     "@react-three/rapier": "^1.2.1",
     "@tensorflow/tfjs": "^4.15.0",
     "axios": "^1.6.3",
+    "canvas": "^2.11.2",
+    "framer-motion": "^11.0.3",
     "gsplat": "^1.0.2",
     "leva": "^0.9.35",
     "next": "14.0.4",
     "r3f-perf": "^7.1.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-konva": "^18.2.10",
     "three": "^0.160.0"
   },
   "devDependencies": {
